# wit-limbo

./: Cargo.toml  README.md  justfile
src/: bindings.rs  lib.rs
tests/: test_wasm_component_layer.rs  test_wasmtime.rs
wit/: world.wit
