[package]
name = "wit-limbo"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
limbo_core = { git = "https://github.com/DougAnderson444/limbo.git", default-features = false, branch = "wasm-unk-unk" }
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
wasm_component_layer = "0.1.18"
wasmtime_runtime_layer = "26.0.0"
rand = "0.8.5"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
wasmtime = { version = "25" }
wasmtime-wasi = "25"
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
debug = false
strip = true
lto = true
panic = "abort"
